--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AP Task</title>
+    <link rel="stylesheet" href="./scss/index.scss">
 </head>
 <body>
-    <!-- user selection -->
-    <section>
-        <div></div>
-        <div></div>
+    <section class="search">
+        <input type="text" placeholder="Search for a Recipe.." id="recipeSearch" />
+        <button id="submitBtn" >Submit</button>
+    </section>
+    <section class="data">
+
     </section>
     
 </body>
