--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AP Task</title>
     <link rel="stylesheet" href="./scss/index.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Langar&family=Libre+Baskerville&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="search">
