--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,12 @@
     <section class="search">
         <input type="text" placeholder="Search for a Recipe.." id="recipeSearch" />
         <button id="submitBtn" >Submit</button>
+        <button id="favoriteBtn" >Favorites</button>
     </section>
-    <section class="data">
+    <section class="data recipeContainer">
 
     </section>
-    
+    <section class="favorites recipeContainer" ></section>
 </body>
 
 <script src="../src/js/index.js" ></script>
