--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
         <button id="submitBtn" >Submit</button>
     </section>
     
-    <button id="favoriteBtn" >Saved Recipes</button>
+    <button id="favoriteBtn" >See Saved Recipes</button>
     <button id="clearFavoriteBtn" >Clear Saved Recipes</button>
-    <section class="data recipeContainer">
+    <section class="recipeContainer" id="data" >
 
     </section>
     <section class="favorites recipeContainer" ></section>
