--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,33 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AP Task</title>
     <link rel="stylesheet" href="./scss/index.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Langar&family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Langar&family=Libre+Baskerville&display=swap" rel="stylesheet">
 </head>
+
 <body>
+    <header>
+        <div class="heading">Recipe Collection</div>
+    </header>
     <section class="search">
         <input type="text" placeholder="Search for a Recipe.." id="recipeSearch" />
-        <button id="submitBtn" >Submit</button>
+        <button id="submitBtn">Submit</button>
     </section>
-    
-    <button id="favoriteBtn" >See Saved Recipes</button>
-    <button id="clearFavoriteBtn" >Clear Saved Recipes</button>
-    <section class="recipeContainer" id="data" >
+
+    <section class="recipeBtns" >
+        <button id="favoriteBtn" class="display" >See Saved Recipes</button>
+        <button id="clearFavoriteBtn">Clear Saved Recipes</button>
+    </section>
+    <section class="recipeContainer" id="data">
 
     </section>
-    <section class="favorites recipeContainer" ></section>
+    <section class="favorites recipeContainer"></section>
 </body>
 
-<script src="../src/js/index.js" ></script>
+<script src="../src/js/index.js"></script>
+
 </html>
